<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">Movies</string>
    <string name="title_tvShow">TV Shows</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_movie">No favorite Movie</string>
    <string name="no_tvShow">No favorite TV Show</string>
</resources>